# py-proj

./: .editorconfig  .gitignore  Pipfile  README.md  init.py  pyproject.toml
resources/common/: base-run.sh
resources/poetry/: .gitignore  README.md  pyproject.toml  run.sh
resources/setuptools/: README.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-test.txt  run.sh  setup.py
resources/setuptools/src/py_project/: main.py
resources/setuptools/tests/: main_test.py
src/py_proj/: main.py
src/py_proj/resources/pyproject/: flit.cfg  pdm.cfg
