[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-proj"
version = "0.0.1"
dependencies = ["rich", "typer"]
requires-python = ">=3.8"
authors = [{ name = "Ryan Kane", email = "rmkane@proton.me" }]
description = "Setup for a Python project"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rmkane/py-project"
Issues = "https://github.com/rmkane/py-project/issues"

[project.scripts]
py-proj = "py_proj.main:main"
