[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py-project"
version = "0.0.1"
description = ""
authors = ["First Last <username@email.com>"]
readme = "README.md"
packages = [{ include = "py_project", from="src" }]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.3.0"

[tool.poetry.scripts]
py-project = "py_project.main:main"
